syntax = "proto3";

package quotes;
option go_package = "api/proto/quotespb";
import "google/protobuf/empty.proto";

message QuoteRequest {
  string movie = 1;
  int32 decade = 2;
}

message Quote {
  string quote = 1;
  string movie = 2;
  string character = 3;
  int32 year = 4;
}

message QuoteList {
  repeated Quote quotes = 1;
}

service QuoteService {
  rpc GetRandomQuote (google.protobuf.Empty) returns (Quote);
  rpc GetQuotes (QuoteRequest) returns (QuoteList);
}